# Study

./: .gitignore  README.md
C++/: README.md  makefile
C++/.cph/: .A_Watermelon.cpp_1969736186d5adacee50178e074dc19a.prob
C++/Inter/problem/: A.cpp
C++/algo/: CMakeLists.txt  PROFILE.md  README.md
C++/algo/adventofcode/: README.md
C++/algo/adventofcode/2015/: README.md
C++/algo/adventofcode/2024/: README.md
C++/algo/adventofcode/2025/: README.md
C++/algo/atcoder/460/: A.cpp
C++/algo/codeforce/: template.cpp
C++/algo/codeforce/.cph/: .A_Watermelon.cpp_e20f96fe7a8faf52e8d845cae33d9a94.prob  .A_Way_Too_Long_Words.cpp_46fe56371e019291e10990d5773237ff.prob  .a.cpp_0e91d33222e5581714b6f455d69155c0.prob  (+1 more)
C++/algo/codeforces/: README.md  template.cpp
C++/algo/common/: CMakeCache.txt  CMakeLists.txt  Makefile  README.md  basis.cpp  binary_index_tree.cpp  kmp.cpp  lca.cpp  longest_balanced_subarray_v2.cpp  modulo_arithmetic.cpp  mono_queue.cpp  prime.cpp  segment_tree.cpp  segment_tree_example.cpp  trie.cpp  union_find.cpp  xor_basis.cpp
C++/algo/common/data_structure/: README.md  binary_indexed_tree.cpp  block_decomposition.cpp  cartesian-tree.cpp  fenwick-tree.cpp  lazy_heap.cpp  mono_queue.cpp  rolling_hash.cpp  splay_tree.cpp  sqrt_decomposition.cpp  st_table.cpp  treap.cpp  trie.cpp  union_find.cpp
C++/algo/common/data_structure/binary_lifting/: binary_lifting_base.cpp  sparse_table.cpp
C++/algo/common/data_structure/range_queries/: fenwick_tree.cpp  presum_2d.cpp  sparse_table.cpp
C++/algo/common/data_structure/range_queries/segment_tree/: binary_search_on_segment_tree.cpp  segment_tree_base.cpp  segment_tree_custom_aggregation.cpp  segment_tree_dynamic.cpp  segment_tree_lazy.cpp  segment_tree_persist.cpp  segment_tree_visibility.cpp
C++/algo/common/data_structure/segment_tree/: README.md  basic.cpp  dynamic.cpp  lazy.cpp  persisted.cpp
C++/algo/common/dp/: README.md  dag.cpp  digit.cpp  knapsack.cpp  mono_queue_optimised_dp.cpp  state.cpp
C++/algo/common/games/: hanoi.cpp
C++/algo/common/graph/: README.md  lca.cpp
C++/algo/common/graph/flow_and_cut/: dinic.cpp  scaling_ford_fulkerson.cpp
C++/algo/common/graph/path_and_circuit/: hamiltonian_path.cpp  hierholzer.cpp  warndolf_rule.cpp
C++/algo/common/graph/path_circuits/: de_bruijn.cpp
C++/algo/common/graph/scc/: contraction.cpp  kosaraju.cpp  sat_2.cpp  two_sat.cpp
C++/algo/common/math/: README.md  abel_sum.cpp  big_num.cpp  comb.cpp  gcd.cpp  mobius.cpp  mod.cpp  safe_hash.cpp  sieve.cpp  xor_basis.cpp
C++/algo/common/strings/: README.md  kmp.cpp  rolling_hash.cpp
C++/algo/common/test/: CMakeLists.txt  test_kmp.cpp  test_lca.cpp  test_modulo_arthmetic.cpp  test_segment_tree.cpp  test_union_find.cpp
C++/algo/cses/: 1068.cpp  1069.cpp  1070.cpp  1071.cpp  1072.cpp  1073.cpp  1074.cpp  1083.cpp  1084.cpp  1085.cpp  1090.cpp  1091.cpp  1092.cpp  1093.cpp  1094.cpp  1097.cpp  1140.cpp  1141.cpp  1143.cpp  1144.cpp  1145.cpp  1158.cpp  1160.cpp  1163.cpp  1164.cpp  1190.cpp  1192.cpp  1193.cpp  1194.cpp  1195.cpp  1196.cpp  1197.cpp  1202.cpp  1617.cpp  1618.cpp  1619.cpp  1620.cpp  1621.cpp  1622.cpp  1623.cpp  (+97 more)
C++/algo/leetcode/: 1.cpp  10.cpp  100.cpp  1003.cpp  1004.cpp  1006.cpp  1007.cpp  1009.cpp  101.cpp  1010.cpp  1011.cpp  1012.cpp  1014.cpp  1015.cpp  1016.cpp  1018.cpp  1019.cpp  102.cpp  1020.cpp  1021.cpp  1022.cpp  1026.cpp  1027.cpp  103.cpp  1031.cpp  1032.cpp  1034.cpp  1035.cpp  1038.cpp  1039.cpp  104.cpp  1040.cpp  1043.cpp  1044.cpp  1046.cpp  1047.cpp  1048.cpp  1049.cpp  105.cpp  1052.cpp  (+1615 more)
C++/lang/: README.md
C++/lang/C++20/: README.md
C++/lang/STL/: CMakeCache.txt  CMakeLists.txt  Makefile  README.md  cmake_install.cmake  compile_commands.json  control_block.cpp  semaphore  semaphore.cpp  shared_ptr.cpp  string.cpp  union  union.cpp  unique_ptr.cpp  vector.cpp  weak_ptr.cpp
C++/lang/cache/: CMakeCache.txt  CMakeLists.txt  KICachePolicy.h  KLfuCache.h  KLruCache.h  Makefile  README.md  cmake_install.cmake  main  testAllCachePolicy.cpp
C++/lang/memory_pool/: CMakeCache.txt  CMakeLists.txt  Makefile  README.md  cmake_install.cmake  perf_test  unit_test
C++/lang/memory_pool/include/: CentralCache.h  Common.h  MemoryPool.h  PageCache.h  README.md  ThreadCache.h
C++/lang/memory_pool/src/: CentralCache.cpp  PageCache.cpp  README.md  ThreadCache.cpp
C++/lang/memory_pool/tests/: PerformanceTest.cpp  README.md  UnitTest.cpp
C++/lang/virtual_inheritance/: CMakeLists.txt  README.md  main.cpp
C++/projects/: README.md
C++/projects/practice/: README.md  a.cpp  b.cpp  c.cpp  d.cpp  e.cpp  f.cpp  g.cpp  h.cpp  i.cpp  j.cpp  k.cpp
C++/projects/stock_exchange/: CMakeCache.txt  CmakeLists.txt  Makefile  README.md  cmake_install.cmake  compile_commands.json  stock_exchange  stock_exchange.cpp
C++/projects/trading_system/: CMakeCache.txt  CmakeLists.txt  Makefile  README.md  cmake_install.cmake  compile_commands.json  trading  trading.cpp  trading_system  trading_system.cpp
DataEng/Airflow/config/: airflow.cfg
DataEng/Spark/: .terraform.lock.hcl  Dockerfile  cleanup.sh  deploy.sh  docker-compose.yml  entrypoint.sh  minikube.tf
DataEng/Spark/conf/: log4j.properties
DataEng/Spark/k8s/: spark-history-server-deployment.yaml  spark-history-server-service.yaml  spark-master-deployment.yaml  spark-master-service.yaml  spark-worker-deployment.yaml
Go/: go.mod
LLM/Agent/: demo.py  environment.yml  web_demo.py
LLM/Agent/src/: core.py  tools.py  utils.py
LLM/LangChain/classify/: env.py  main.py
LLM/LangChain/extraction/: main.py
LLM/LangChain/llm_chain/: .env  main.py  requirements.txt
LLM/LangChain/semantic_search/: chatbot.py  main.py  pyproject.toml  requirements.txt  retriever.py  run_chatbot.py
LLM/LangChain/semantic_search/vectordb/: chroma.py
LLM/LangChain/semantic_search/vectordb/onetime/: init_chroma.py
LLM/Mcp-project/: client.py  pyproject.toml  server.py
LLM/Mcp-project/servers/: calendar_server.py  weather_server.py
LLM/OpenAI-multi-agents/: conversations.db  pyproject.toml
Utilities/: housing.py  pyproject.toml
(+282 files in other folders)
