[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "OpenAI-multi-agents"
version = "0.2.0"
description = "OpenAI multi agents"
authors = [
    {name = "You Yue", email = "youy0004123@gmail.com"}
]
requires-python = ">=3.11"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Text Processing :: Linguistic",
]


[tool.poetry]
name = "OpenAI-agents"
version = "0.1.0"
description = "OpenAI agents"
authors = ["Your Name <your.name@example.com>"]

[tool.poetry.dependencies]
python = "^3.11"
langchain = "^0.3.1"
openai = "^1.6.0"
openai-agents = "^0.2.0"
